# -vLLM-SLO-

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cpp-ci.yml
benchmarks/: README.md
benchmarks/scenarios/: baseline.example.yaml
configs/: controller.example.yaml  proxy.local.example.json  vllm.env.example
controller/: CMakeLists.txt
controller/include/vllm_slo/: admission_policy.hpp  inflight_limiter.hpp  metrics_snapshot.hpp  proxy_config.hpp  proxy_metrics.hpp  proxy_server.hpp  proxy_session.hpp  sliding_window.hpp  sse_parser.hpp  token_bucket.hpp
controller/src/: admission_policy.cpp  inflight_limiter.cpp  main.cpp  proxy_main.cpp  proxy_metrics.cpp  proxy_server.cpp  proxy_session.cpp  sliding_window.cpp  sse_parser.cpp  token_bucket.cpp
controller/tests/: test_admission_policy.cpp  test_inflight_limiter.cpp  test_proxy_metrics.cpp  test_sliding_window.cpp  test_sse_parser.cpp  test_token_bucket.cpp
deploy/vllm/: README.md  start_server.sh
docs/: 00_project_scope.md  01_architecture.md  02_two_machine_workflow.md  03_experiment_contract.md  04_milestones.md
docs/interview/: 00_learning_map.md  01_cpp_async_http_sse.md
scripts/local/: smoke_test_proxy.ps1  start_mock_server.ps1  start_proxy.ps1  stop_local_stack.ps1
scripts/validation/: collect_environment.sh  smoke_test_api.sh
std-infra/: .gitignore  00_学习路线.md  00_学习进度.md  AGENTS.md  README.md  requirements-dev.txt
std-infra/docs/: 00_environment.md  00_roadmap.md  00_source_policy.md  progress.md
std-infra/docs/interviews/: README.md  source_registry.md  unverified_candidates.md  verified_questions.md
std-infra/章节/: 01_LLM推理全景图.md  02_Token与Embedding.md  03_线性层与参数计算.md  04_Self-Attention.md  05_Multi-Head Attention与Decoder Block.md  06_训练与推理的区别.md  07_Prefill与Decode.md  08_KV Cache.md  09_MHA、MQA、GQA.md  10_FlashAttention.md  11_PagedAttention.md  12_Continuous Batching与Scheduler.md  13_vLLM Runtime.md  14_量化.md  15_GPU与CUDA推理常识.md  16_推理性能指标与分析.md  17_推理优化总图.md
std-infra/面试题/: 00_面试题说明.md  已核实问题.md  未核实候选问题.md  来源登记.md  高频问题汇总.md
tools/mock_vllm/: README.md  mock_vllm_server.py
